--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,45 +11,21 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# QtCreator supports the following variables for Android, which are identical to qmake Android variables.
-# Check https://doc.qt.io/qt/deployment-android.html for more information.
-# They need to be set before the find_package( ...) calls below.
-
-#if(ANDROID)
-#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
-#    if (ANDROID_ABI STREQUAL "armeabi-v7a")
-#        set(ANDROID_EXTRA_LIBS
-#            ${CMAKE_CURRENT_SOURCE_DIR}/path/to/libcrypto.so
-#            ${CMAKE_CURRENT_SOURCE_DIR}/path/to/libssl.so)
-#    endif()
-#endif()
 
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
 find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)
 
 set(PROJECT_SOURCES
-        main.cpp
-        mainwindow.cpp
-        mainwindow.hpp
-        mainwindow.ui
-        resources.qrc
+        src/main.cpp
+        src/mainwindow.cpp
+        src/mainwindow.hpp
+        src/mainwindow.ui
+        src/resources.qrc
         presets.csv
 )
 
-if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(gearboxplus
-        ${PROJECT_SOURCES}
-    )
-else()
-    if(ANDROID)
-        add_library(gearboxplus SHARED
-            ${PROJECT_SOURCES}
-        )
-    else()
-        add_executable(gearboxplus
-            ${PROJECT_SOURCES}
-        )
-    endif()
-endif()
+
+add_executable(gearboxplus ${PROJECT_SOURCES})
+
 
 target_link_libraries(gearboxplus PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
